--- a/virtualMinds/.classpath
+++ b/virtualMinds/.classpath
@@ -6,7 +6,15 @@
 	<classpathentry kind="src" path="src/env"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JaCaMo"/>
 	<classpathentry kind="lib" path="lib/gson-2.8.5.jar" sourcepath="lib/gson-2.8.5-sources.jar"/>
-	<classpathentry kind="lib" path="lib/tyrus-standalone-client-1.12.jar" sourcepath="lib/tyrus-standalone-client-1.12-sources.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/tyrus-standalone-client-1.15.jar" sourcepath="lib/tyrus-standalone-client-1.15-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/virtualMinds/lib/tyrus-standalone-client-1.15-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
